--- a/index.html
+++ b/index.html
@@ -15,18 +15,14 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark py-3">
         <div class="container">
             <a href="" class="navbar-brand">Front-end Bootcamp</a>
 
-            <button
-             class="navbar-toggler"
-              type="button"
-               data-bs-toggle="collapse" data-bs-target="#navmenu"
-               >
-               <span class="navbar-toggler-icon">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+                <span class="navbar-toggler-icon">
 
-               </span>
+                </span>
             </button>
 
             <div class="collapse navbar-collapse" id="navmenu">
@@ -49,24 +45,45 @@
 
     </nav>
     <!-- Navbar Ends -->
-    <!-- Section -->
-    <section class="bg-dark text-light p-5 text-center">
+    <!-- Section hero -->
+    <section class="bg-dark text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
         <div class="container">
 
-            <div class="d-sm-flex">
+            <div class="d-sm-flex align-items-center">
                 <div>
                     <h1>Become a <span class="text-warning">web developer</span></h1>
-                    <p class="lead">
-                        I am doing this project to learn and master the bootstrap. As learn by doing is the best learning.
-
+                    <p class="lead my-4">
+                        I am doing this project to learn and master the bootstrap. As learn by doing is the best
+                        learning.I think this is the best way to learn anything fast
                     </p>
+                    <button class="btn btn-primary btn-lg">Start the enrollment</button>
                 </div>
 
-                <img class="img-fluid w-50" src="./img/showcase.svg" alt="">
+                <img class="img-fluid w-50 d-none d-sm-block " src="./img/showcase.svg" alt="">
             </div>
 
         </div>
     </section>
+    <!-- Section hero ends-->
+    <!-- Section newsletter  -->
+    <section class="bg-primary text-light p-5">
+        <div class="container">
+            <div class="d-md-flex justify-content-between align-items-center">
+
+                <h3 class="mb-3 mb-md-0 text-sm-center">Sign Up for Our Newsletter</h3>
+
+                <div class="input-group news-input">
+                    <input type="text" class="form-control" placeholder="Enter Your Email">
+
+                    <button class="btn btn-dark btn-lg" type="button">Button</button>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <!-- Section newsletter  Ends-->
+    <!-- Boxes starts -->
+    
 
 
 
