--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Bootstrap icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
@@ -83,7 +85,120 @@
     </section>
     <!-- Section newsletter  Ends-->
     <!-- Boxes starts -->
-    
+    <section class="p-5">
+        <div class="container">
+            <div class="row text-center g-4">
+                <div class="col-md">
+                    <div class="card bg-secondary text-light">
+                        <div class="card-body text-center">
+                            <div class="h1 mb-3">
+                                <i class="bi bi-person-square"></i>
+                            </div>
+                            <h3 class="card-title mb-3">
+                                Hybrid
+                            </h3>
+                            <p class="card-text">
+                                This is card text. So its some explanation of how this card covers.An icon, title, text
+                                within this card. We could use an image as well instead of icon.
+                            </p>
+                            <a href="#" class="btn btn-dark">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="card bg-dark text-light">
+                        <div class="card-body text-center">
+                            <div class="h1 mb-3">
+                                <i class="bi bi-laptop"></i>
+                            </div>
+                            <h3 class="card-title mb-3">
+                                Virtual
+                            </h3>
+                            <p class="card-text">
+                                This is card text. So its some explanation of how this card covers.An icon, title, text
+                                within this card. We could use an image as well instead of icon.
+                            </p>
+                            <a href="#" class="btn btn-primary">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="card bg-secondary text-light">
+                        <div class="card-body text-center">
+                            <div class="h1 mb-3">
+                                <i class="bi bi-people"></i>
+                            </div>
+                            <h3 class="card-title mb-3">
+                                In Person
+                            </h3>
+                            <p class="card-text">
+                                This is card text. So its some explanation of how this card covers.An icon, title, text
+                                within this card. We could use an image as well instead of icon.
+                            </p>
+                            <a href="#" class="btn btn-dark">Read More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Boxes ends -->
+    <!-- Learn Section -->
+    <section id="learn" class="p-5">
+        <div class="container">
+            <div class="row align-items-center justify-content-between">
+                <div class="col-md">
+                    <img class="img-fluid" src="./img/fundamentals.svg" alt="">
+                </div>
+                <div class="col-md p-5">
+                    <h2>Learn the fundamentals</h2>
+                    <p class="lead">
+                        learn the basic so u can move the mountains. Steve jobs once said. If u learn a thing well then
+                        u can do anything with it.
+                    </p>
+                    <p class="lead">
+                        After u learn anything well, then u can visualize that thing so accurately. That skill is
+                        required to make stuffs perfect with that skill.
+                    </p>
+                    <a href="#" class="btn btn-light mt-3">
+                        <i class="bi bi-chevron-light"></i>Read More
+                    </a>
+
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <!-- Learn Section Ends-->
+    <!-- Learn React Section -->
+    <section id="learn" class="p-5 bg-dark text-light">
+        <div class="container">
+            <div class="row align-items-center justify-content-between">
+
+                <div class="col-md p-5">
+                    <h2>Learn React</h2>
+                    <p class="lead">
+                        learn the basic so u can move the mountains. Steve jobs once said. If u learn a thing well then
+                        u can do anything with it.
+                    </p>
+                    <p class="lead">
+                        After u learn anything well, then u can visualize that thing so accurately. That skill is
+                        required to make stuffs perfect with that skill.
+                    </p>
+                    <a href="#" class="btn btn-light mt-3">
+                        <i class="bi bi-chevron-light"></i>Read More
+                    </a>
+
+                </div>
+
+                <div class="col-md">
+                    <img class="img-fluid" src="./img/react.svg" alt="">
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <!-- Learn React Section Ends-->
 
 
 
