--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- Bootstrap icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <!-- Mapbox -->
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
@@ -217,7 +219,10 @@
                     </h2>
                     <div id="question-one" class="accordion-collapse collapse" data-bs-parent="#questions">
                         <div class="accordion-body">
-                            I am learning to code bootstrap sitting in my home at Bagerhat. Learning by doing. Let me add some lorem -- Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum doloremque repellat, architecto est ullam aspernatur totam dicta laborum, obcaecati autem iste illum accusamus.
+                            I am learning to code bootstrap sitting in my home at Bagerhat. Learning by doing. Let me
+                            add some lorem -- Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum doloremque
+                            repellat, architecto est ullam aspernatur totam dicta laborum, obcaecati autem iste illum
+                            accusamus.
                         </div>
                     </div>
                 </div>
@@ -233,7 +238,10 @@
                     </h2>
                     <div id="question-two" class="accordion-collapse collapse" data-bs-parent="#questions">
                         <div class="accordion-body">
-                            I am learning to code bootstrap sitting in my home at Bagerhat. Learning by doing. Let me add some lorem -- Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum doloremque repellat, architecto est ullam aspernatur totam dicta laborum, obcaecati autem iste illum accusamus.
+                            I am learning to code bootstrap sitting in my home at Bagerhat. Learning by doing. Let me
+                            add some lorem -- Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum doloremque
+                            repellat, architecto est ullam aspernatur totam dicta laborum, obcaecati autem iste illum
+                            accusamus.
                         </div>
                     </div>
                 </div>
@@ -249,7 +257,10 @@
                     </h2>
                     <div id="question-three" class="accordion-collapse collapse" data-bs-parent="#questions">
                         <div class="accordion-body">
-                            I am learning to code bootstrap sitting in my home at Bagerhat. Learning by doing. Let me add some lorem -- Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum doloremque repellat, architecto est ullam aspernatur totam dicta laborum, obcaecati autem iste illum accusamus.
+                            I am learning to code bootstrap sitting in my home at Bagerhat. Learning by doing. Let me
+                            add some lorem -- Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum doloremque
+                            repellat, architecto est ullam aspernatur totam dicta laborum, obcaecati autem iste illum
+                            accusamus.
                         </div>
                     </div>
                 </div>
@@ -262,14 +273,16 @@
         <div class="container">
             <h2 class="text-center text-white">Our Instructors</h2>
             <p class="lead text-center text-white mb-5">
-                My instructor has more than 10 years working experience as a web developer in Silicon Valley, Callifornia.
+                My instructor has more than 10 years working experience as a web developer in Silicon Valley,
+                Callifornia.
             </p>
             <div class="row g-4">
 
                 <div class="col-md-6 col-lg-3">
                     <div class="card bg-light">
                         <div class="card-body text-center">
-                            <img src="https://randomuser.me/api/portraits/men/11.jpg" class="rounded-circle mb-3" alt="">
+                            <img src="https://randomuser.me/api/portraits/men/11.jpg" class="rounded-circle mb-3"
+                                alt="">
                             <h3 class="card-title mb-3">John Doe</h3>
                             <p class="card-text">My instructor worked in silicon valley at Nielson</p>
 
@@ -284,7 +297,8 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="card bg-light">
                         <div class="card-body text-center">
-                            <img src="https://randomuser.me/api/portraits/women/11.jpg" class="rounded-circle mb-3" alt="">
+                            <img src="https://randomuser.me/api/portraits/women/11.jpg" class="rounded-circle mb-3"
+                                alt="">
                             <h3 class="card-title mb-3">Jane Doe</h3>
                             <p class="card-text">My instructor worked in silicon valley at Nielson</p>
 
@@ -299,7 +313,8 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="card bg-light">
                         <div class="card-body text-center">
-                            <img src="https://randomuser.me/api/portraits/men/12.jpg" class="rounded-circle mb-3" alt="">
+                            <img src="https://randomuser.me/api/portraits/men/12.jpg" class="rounded-circle mb-3"
+                                alt="">
                             <h3 class="card-title mb-3">Steve Smith</h3>
                             <p class="card-text">My instructor worked in silicon valley at Nielson</p>
 
@@ -314,7 +329,8 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="card bg-light">
                         <div class="card-body text-center">
-                            <img src="https://randomuser.me/api/portraits/women/12.jpg" class="rounded-circle mb-3" alt="">
+                            <img src="https://randomuser.me/api/portraits/women/12.jpg" class="rounded-circle mb-3"
+                                alt="">
                             <h3 class="card-title mb-3">Sara Smith</h3>
                             <p class="card-text">My instructor worked in silicon valley at Nielson</p>
 
@@ -330,6 +346,40 @@
         </div>
     </section>
     <!-- Instructor Section Ends -->
+    <!-- Contact & Map -->
+    <section class="p-5">
+        <div class="container">
+            <div class="row g-4">
+                <div class="col-md">
+                    <h2 class="text-center mb-4">Contact Info</h2>
+
+                    <ul class="list-group list-group-flush lead">
+
+                        <li class="list-group-item">
+                            <span class="fw-bold">Main Location:</span>50 Main St Boston MA
+                        </li>
+                        <li class="list-group-item">
+                            <span class="fw-bold">Enrollment Phone:</span>50 Main St Boston MA
+                        </li>
+                        <li class="list-group-item">
+                            <span class="fw-bold">Student Phone:</span>50 Main St Boston MA
+                        </li>
+                        <li class="list-group-item">
+                            <span class="fw-bold">Student Email:</span>50 Main St Boston MA
+                        </li>
+                        <li class="list-group-item">
+                            <span class="fw-bold">Student Email:</span>50 Main St Boston MA
+                        </li>
+                    </ul>
+
+                </div>
+                <div class="col-md">
+                    <div id="map"></div>
+
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
@@ -338,6 +388,19 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+    <!-- Mapbox -->
+    <script src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
+    <!-- Script  for using mapbox using my token-->
+    <script>
+        mapboxgl.accessToken = 'pk.eyJ1IjoiYWs4IiwiYSI6ImNreW14ZWduYTJzdm0zMXNlY3Jram96OW0ifQ.Ae8zBKb9IlPJL-5bus9PQw';
+        var map = new mapboxgl.Map({
+            container: 'map',
+            style: 'mapbox://styles/mapbox/streets-v11',
+            center: [-71.060982, 42.35725],
+            zoom: 18
+        });
+    </script>
+
 </body>
 
 </html>
